--- a/docs/板子/快速幂.md
+++ b/docs/板子/快速幂.md
@@ -1,9 +1,10 @@
 # [快速幂]()
 
 ```c++
-ll qpow(ll a, ll b, ll mod)
+long long qpow(long long a, long long b, long long mod)
 {
-    ll ans = 1;
+    long long ans = 1;
+    a %= mod; b %= mod;
     while (b)
     {
         if (b & 1) ans = ans * a % mod;
