--- a/docs/CSS 笔记/类选择器.md
+++ b/docs/CSS 笔记/类选择器.md
@@ -2,7 +2,7 @@
 
 ```html
 <style>
-    .red, .text { /*标签选择器*/
+    .red, .text { 
         color: red;
         }
 </style>
@@ -37,7 +37,7 @@
         <span><em class="red">hello java</em></span>
     </div>
     <style>
-        .red, .text { /*标签选择器*/
+        .red, .text { 
             color: red;
         }
     </style>
