--- a/docs/CSS 笔记/多类选择器.md
+++ b/docs/CSS 笔记/多类选择器.md
@@ -15,7 +15,7 @@
 
 ```html
 <style>
-    .text.red { /*标签选择器*/
+    .text.red { 
         color: red;
         font-weight: bolder;
     }
@@ -51,7 +51,7 @@
         <span><em class="red">hello java</em></span>
     </div>
     <style>
-        .red.text { /*标签选择器*/
+        .red.text { 
             color: red;
             font-weight: bolder;
         }
