--- a/docs/CSS 笔记/属性选择器.md
+++ b/docs/CSS 笔记/属性选择器.md
@@ -49,7 +49,8 @@
 <body>
     
 <!-- =========================================== -->
-    <br>
+    <div> 
+        <span text="em"> hello world </span> <br>
         <p text="em"> hello python </p>
         <strong text="em"> hello java </strong>
     </div>
