关于整除的一些结论.md

--- a/docs/板子/关于整除的一些结论.md
+++ b/docs/板子/关于整除的一些结论.md
@@ -12,7 +12,7 @@
 
 ---
 
-最大公约数：
+## 最大公约数：
 
 ```cpp
 long long gcd(long long x, long long y) {
@@ -20,7 +20,7 @@ long long gcd(long long x, long long y) {
 }
 ```
 
-最小公倍数：
+## 最小公倍数：
 
 ```cpp
 long long res = a / gcd(a, b) * b;
@@ -45,7 +45,7 @@ for i in ls:
 
 ---
 
-关于整数解：
+## 关于整数解：
 
 1. 若 $(a, b) | sum$，则必定存在 $ax + by = sum$，且 $x$、$y$ 都是整数（*存在整数解*）
 2. 对于方程 $ax + by = c$，如果 $(a, b) | c$ 则存在整数解，否则一定没有！
@@ -54,7 +54,7 @@ for i in ls:
 
 ---
 
-扩展欧几里得：
+## 扩展欧几里得：
 
 ```cpp
 long long exgcd(long long a, long long b, longl ong &x, long long &y) {
@@ -64,3 +64,34 @@ long long exgcd(long long a, long long b, longl ong &x, long long &y) {
     return d;
 }
 ```
+
+---
+
+## 求方程 $ax + by = c$ 的通解：
+
+先求出 $ax + by = (a, b)$ 的一对解 $\{x, y\}$
+
+则特解：$\{\frac{c}{(a, b)} * x, \frac{c}{(a,b)} * y\}$
+
+通解为：$\{\frac{c}{(a, b)} * x + \frac{b}{(a, b)} * N, \frac{c}{(a,b)} * y - \frac{a}{(a, b)} * N\}$
+
+证明如下：
+
+> $\frac{c}{(a, b)} (ax + by) = c$
+>
+> $\frac{c}{(a, b)} \{a(x + k_1), b(y + k_2) = c\}$
+>
+> $\frac{c}{(a, b)} (ax + by) + \frac{c}{(a, b)} (ak_1 + bk_2) = c$，且 $ak_1 + bk_2 = 0$
+>
+> 所以：$ak_1 = -bk_2 = -[a, b] * N = -\frac{ab}{(a, b)} * N$
+>
+> 所以：$k_1 = - \frac{b}{(a, b)} * N$, $k_2 = \frac{a}{(a, b)} * N$
+
+---
+
+# 关于方程 $ax + by + cz = d$ 的特解：
+
+1. 首先 $(a, b, c) | d$ 必定成立
+2. 先求出 $ax + by = (a, b)$ 的一对特解记为 $x_1, y_1$
+3. 再求出 $(a, b)t + cz = ((a, b), c)$ 的一对特解，记为 $t_1, z_1$
+4. 则 $ax + by + cz = (a, b, c)$ 的特解为：$(x_1t_1, y_1t_1, z_1)$
