关于整除的一些结论.md

--- a/docs/板子/关于整除的一些结论.md
+++ b/docs/板子/关于整除的一些结论.md
@@ -89,6 +89,58 @@ long long exgcd(long long a, long long b, long long &x, long long &y) {
 
 ---
 
+## 求一组 $ax + by = c$ 的正整数解：
+
+如果求出 $ax + by = d$ 的一组解为 $x_0, y_0$，则原方程的特解为：$\frac{c}{d} * x_0, \frac{c}{d} * y_0$
+
+先让 $x_0$ 变成最小非负整数解：$\frac{c}{d} * x_0 + \frac{b}{d} * N$ 转变为问题：$\frac{c}{d} * x_0$ 需要加上或者减去多少个 $\frac{b}{d}$ 才会变成非负数，先求出 $\frac{c}{d} * x_0$ 取模 $\frac{b}{d}$ 的余数，如果余数是负数，则需要再加上一个 $\frac{b}{d}$ 这样就可以编程最小非负整数解！
+
+如果 $x_0$ 已经变成最小非负整数解了，那么 $y_0$ 如果还是负数的话，就需要减去多一个 $-\frac{a}{d}$，那么平行项 $x_0$ 就需要减掉一个 $\frac{b}{d}$ 会变成负数，所以肯定不可能成立！
+
+```cpp
+#include <bits/stdc++.h>
+
+long long exgcd(long long a, long long b, long long &x, long long &y) {
+    if (b == 0) { x = 1; y = 0; return a; }
+    long long d = exgcd(b, a % b, y, x);
+    y -= a / b * x;
+    return d;
+}
+
+long long a, b, c;
+long long x, y;
+
+void solve() {
+    std::cin >> a >> b >> c;
+    long long d = exgcd(a, b, x, y);
+    if (c % d) {
+        std::cout << -1 << '\n'; return;
+    }
+    {
+        a /= d; b /= d; c /= d;
+        __int128 x1 = x; x1 *= c;
+        __int128 y1 = y; y1 *= c;
+        __int128 x2 = (x1 % b + b) % b;
+        __int128 y2 = y1 - (x2 - x1) / b * a;
+        if (y2 < 0) {
+            std::cout << -1 << '\n'; return;
+        }
+        std::cout << (long long)x2 << ' ' << (long long)y2 << '\n';
+    }
+}
+
+int main() {
+    std::ios::sync_with_stdio(0);
+    std::cin.tie(0); std::cout.tie(0);
+    long long t; std::cin >> t; while (t --)
+    solve();
+    return 0;
+}
+
+```
+
+---
+
 # 关于方程 $ax + by + cz = d$ 的特解：
 
 1. 首先 $(a, b, c) | d$ 必定成立
