关于整除的一些结论.md

--- a/docs/板子/关于整除的一些结论.md
+++ b/docs/板子/关于整除的一些结论.md
@@ -141,6 +141,43 @@ int main() {
 
 ---
 
+## 求 $(ax + by) \bmod m$ 的最小值
+
+答案是：$0$
+
+证明过程如下：
+
+> $(ax + by) \bmod m$
+>
+> 等价于：$(ax + by + tm) \bmod m$
+>
+> 而 $(ax + by + tm) = k * \gcd(a, b, m)$
+>
+> 要让 $k * \gcd(a, b, m)$ 最小，只需要让 $k = 0$ 即可
+
+---
+
+## 求 $(ax + by + c) \bmod m$ 的最小值
+
+答案：$c \bmod \gcd(a, b, m)$
+
+证明过程如下：
+
+> $(ax + by + c) \bmod m$
+>
+> 等价于：$(ax + by + c + tm) \bmod m$
+>
+> $k * \gcd(a, b, m) + c$ 最小
+>
+> 所以令：$k = c / \gcd(a, b, m)$
+>
+> $k$ 是否是真的可以让取模后的值最小呢？
+>
+> 假设 $k$ 并不是答案，那么再加上 $K$ 个 $\gcd(a, b, m)$ 后的式子 $k * \gcd(a, b, m) + K * \gcd(a, b, m) + c$ 才是答案
+>
+> 由于 $\gcd(a, b, m) | m$ 所以无论再继续加多少个 $\gcd(a, b, m)$ 都只会是一个以 $k * \gcd(a, b, m) + c$ 为首项，$\gcd(a, b, m)$ 为公差的循环节
+---
+
 # 关于方程 $ax + by + cz = d$ 的特解：
 
 1. 首先 $(a, b, c) | d$ 必定成立
