关于整除的一些结论.md

--- a/docs/板子/关于整除的一些结论.md
+++ b/docs/板子/关于整除的一些结论.md
@@ -159,7 +159,7 @@ int main() {
 
 ## 求 $(ax + by + c) \bmod m$ 的最小值
 
-答案：$c \bmod \gcd(a, b, m)$
+答案：$\min\{c \bmod \gcd(a, b, m), c \bmod \gcd(a, b, m) - \gcd(a, b, m)\}$
 
 证明过程如下：
 
@@ -176,6 +176,14 @@ int main() {
 > 假设 $k$ 并不是答案，那么再加上 $K$ 个 $\gcd(a, b, m)$ 后的式子 $k * \gcd(a, b, m) + K * \gcd(a, b, m) + c$ 才是答案
 >
 > 由于 $\gcd(a, b, m) | m$ 所以无论再继续加多少个 $\gcd(a, b, m)$ 都只会是一个以 $k * \gcd(a, b, m) + c$ 为首项，$\gcd(a, b, m)$ 为公差的循环节
+>
+> 还可以讨论一下为什么不是 $m - \gcd(a, b, m) + k * \gcd(a, b, m) + c$ 最小
+>
+> 因为 $k * \gcd(a, b, m) + c < \gcd(a, b, m)$
+>
+> 而 $\gcd(a, b, m) | m$，所以 $m = k\gcd(a, b, m), k \geq 1$ 所以：$m - \gcd(a, b, m) + k * \gcd(a, b, m) + c \geq (k - 1) * \gcd(a, b, m)$ 对于 $k > 1$ 的情况都成立，但是如果 $k = 1$ 呢？还是有可能的哦
+
+
 ---
 
 # 关于方程 $ax + by + cz = d$ 的特解：
