关于整除的一些结论.md

--- a/docs/板子/关于整除的一些结论.md
+++ b/docs/板子/关于整除的一些结论.md
@@ -169,7 +169,7 @@ int main() {
 >
 > $k * \gcd(a, b, m) + c$ 最小
 >
-> 所以令：$k = c / \gcd(a, b, m)$
+> 所以令：$k = -c / \gcd(a, b, m)$
 >
 > $k$ 是否是真的可以让取模后的值最小呢？
 >
