关于整除的一些结论.md

--- a/docs/板子/关于整除的一些结论.md
+++ b/docs/板子/关于整除的一些结论.md
@@ -192,3 +192,19 @@ int main() {
 2. 先求出 $ax + by = (a, b)$ 的一对特解记为 $x_1, y_1$
 3. 再求出 $(a, b)t + cz = ((a, b), c)$ 的一对特解，记为 $t_1, z_1$
 4. 则 $ax + by + cz = (a, b, c)$ 的特解为：$(x_1t_1, y_1t_1, z_1)$
+
+## 同余的一些性质
+
+若 $a \equiv b (\bmod \ m)$ 且 $a \equiv b (\bmod \ n)$ 成立，则 $a \equiv b (\bmod \ [m, n])$
+
+> $m | a - b, n | a - b$ 所以 $[m, n] | a - b$
+
+若 $(k, m) = d$，且 $ka \equiv ka\prime (\bmod \ m)$ 则 $a \equiv a\prime (\bmod \frac{m}{d})$
+
+> $m | k(a - a\prime)$
+>
+> $\frac{m}{d} | \frac{k}{d}(a - a\prime)$
+>
+> 因为 $d$ 是 $m$ 和 $k$ 的最大公约数，所以 $\frac{m}{d}$ 与 $\frac{k}{d}$ 互质
+>
+> 所以就只可能：$\frac{m}{d} | a - a\prime$
