数论的一些知识.md

--- a/docs/板子/数论的一些知识.md
+++ b/docs/板子/数论的一些知识.md
@@ -214,3 +214,62 @@ int main() {
 > $ax + my = b$
 >
 > 用 $exgcd$ 求出一个特解
+
+# 容斥原理
+
+假设有 $n$ 个集合：$S_1$，$S_2$，···，$S_n$，求：$S_1 \cup S_2 \cup \cdots \cup S_n$
+
+答案：1个集合的组合 - 2个集合的组合 + 3个集合的组合 - 4个集合的组合 ··· ···
+
+题目：给定一个整数 $n$ 和 $m$ 个整数，求 $1 \sim n$ 中能被这 $m$ 个整数的某一个整除的个数有多少个？
+
+```cpp
+#include <bits/stdc++.h>
+#define int long long
+
+const int N = 1e2;
+int n, m;
+int a[N];
+int res;
+
+inline int lcm(int x, int y) {
+    return x / std::__gcd(x, y) * y;
+}
+
+std::vector<int> get(int x) {
+    int i = 1, j = 0;
+    std::vector<int> res;
+    while (i <= x) {
+        if (x & i) res.push_back(a[j + 1]);
+        i <<= 1; j += 1;
+    }
+    return res;
+}
+
+void solve() {
+    std::cin >> n >> m;
+    for (int i = 1; i <= m; i ++) std::cin >> a[i];
+    for (int i = 1; i < (1 << m); i ++) {
+        auto vt = get(i);
+        int mo = (vt.size() & 1) ? 1 : -1;
+        int t = 1;
+        for (auto x : vt) {
+            t = lcm(t, x);
+            if (t > n) break;
+        }
+        if (t > n) continue;
+        res += mo * n / t;
+    }
+    std::cout << res << '\n';
+}
+
+signed main() {
+    std::ios::sync_with_stdio(0);
+    std::cin.tie(0); std::cout.tie(0);
+    
+    solve();
+    return 0;
+}
+```
+
+## 
