--- a/docs/板子/数论的一些知识.md
+++ b/docs/板子/数论的一些知识.md
@@ -274,10 +274,10 @@ signed main() {
 
 ## 组合数
 
-用二进制表示组合数：
+用二进制表示组合排列：
 
 ```cpp
 for (int i = 0; i < (1 << n); i ++)
 ```
 
-用 `dfs` 求组合数
+用 `dfs` 求组合排列
