数论的一些知识.md

--- a/docs/板子/数论的一些知识.md
+++ b/docs/板子/数论的一些知识.md
@@ -274,6 +274,8 @@ signed main() {
 
 ## 组合数
 
+### 排列组合
+
 用二进制表示组合排列：
 
 ```cpp
@@ -281,3 +283,57 @@ for (int i = 0; i < (1 << n); i ++)
 ```
 
 用 `dfs` 求组合排列
+
+---
+
+### 求组合数
+
+$C(a, b) = \frac{a!}{b!(a - b)!} = C(a - 1, b) + C(a - 1, b - 1)$ 杨辉三角的推导方法推出下面一项
+
+---
+
+如果需要求的组合数很大，并且需要对一个质数 $p$ 取模，可以用卢卡斯定理求：
+
+> $C(a, b) = C(a \bmod p, b \bmod p) * C(a / p, b / p)$ 递归求下一项
+ 
+```cpp
+#include <bits/stdc++.h>
+#define int long long
+
+const int N = 1e5 + 100;
+int fac[N]; // 阶乘
+int a, b, p;
+
+int exgcd(int a, int b, int& x, int& y) {
+    if (b == 0) { x = 1; y = 0; return a; }
+    int d = exgcd(b, a % b, y, x);
+    y -= a / b * x;
+    return d;
+}
+
+int C(int a, int b, int mod) {
+    int p = fac[a], q = fac[b] * fac[a - b] % mod;
+    int d, x, y; d = exgcd(q, mod, x, y);
+    return (p * x % mod + mod) % mod;
+}
+
+int lucas(int a, int b, int mod) {
+    if (b == 0) return 1;
+    return C(a % mod, b % mod, mod) * lucas(a / mod, b / mod, mod) % mod;
+}
+
+void solve() {
+    fac[0] = 1;
+    std::cin >> a >> b >> p;
+    for (int i = 1; i < N; i ++) fac[i] = fac[i - 1] * i % p;
+    std::cout << lucas(a, b, p) << '\n';
+}
+
+signed main() {
+    std::ios::sync_with_stdio(0);
+    std::cin.tie(0); std::cout.tie(0);
+    int t; std::cin >> t; while (t --)
+    solve();
+    return 0;
+}
+```
