数论的一些知识.md

--- a/docs/板子/数论的一些知识.md
+++ b/docs/板子/数论的一些知识.md
@@ -337,3 +337,41 @@ signed main() {
     return 0;
 }
 ```
+
+## 欧拉函数
+
+求 $1 \sim n$ 范围内与 $n$ 互质的个数：
+
+$n = p_1^{a_1}p_2^{a_2} \cdots p_k^{a_k}$
+
+则答案为：$n * \frac{p_1 - 1}{p_1} * \frac{p_2 - 1}{p_2} * \frac{p_3 - 1}{p_3} * \cdots * \frac{p_k - 1}{p_k}$
+
+该式子也称为欧拉函数！
+
+```cpp
+#include <bits/stdc++.h>
+#define int long long
+
+int n;
+int res;
+
+void solve() {
+    std::cin >> n;
+    res = n;
+    for (int i = 2; i * i <= n; i ++) {
+        if (n % i) continue;
+        res = res / i * (i - 1);
+        while (n % i == 0) n /= i;
+    }
+    if (n != 1) res = res / n * (n - 1);
+    std::cout << res << '\n';
+}
+
+signed main() {
+    std::ios::sync_with_stdio(0);
+    std::cin.tie(0); std::cout.tie(0);
+    int t; std::cin >> t; while (t --)
+    solve();
+    return 0;
+}
+```
