数论的一些知识.md

--- a/docs/板子/数论的一些知识.md
+++ b/docs/板子/数论的一些知识.md
@@ -375,3 +375,9 @@ signed main() {
     return 0;
 }
 ```
+
+## 欧拉定理
+
+令 $1 \sim m$ 范围内与 $m$ 互质的个数为 $f(m)$，若 $\gcd(a, m) \equiv 1$ 则 $a ^ {f(m)} \equiv 1 (\bmod \ m)$
+
+特殊情况下，若 $m$ 是质数，则 $f(m) = m - 1$，所以有：$a^{m - 1} \equiv 1 (\bmod \ m)$
