--- a/docs/板子/数论的一些知识.md
+++ b/docs/板子/数论的一些知识.md
@@ -381,3 +381,49 @@ signed main() {
 令 $1 \sim m$ 范围内与 $m$ 互质的个数为 $f(m)$，若 $\gcd(a, m) \equiv 1$ 则 $a ^ {f(m)} \equiv 1 (\bmod \ m)$
 
 特殊情况下，若 $m$ 是质数，则 $f(m) = m - 1$，所以有：$a^{m - 1} \equiv 1 (\bmod \ m)$
+
+## 逆元
+
+### 快速幂求逆元：
+
+```cpp
+int qpow(int a, int b, int mod) {
+    a = (a % mod + mod) % mod;
+    int ans = 1;
+    while (b) {
+        if (b & 1) ans = ans * a % mod;
+        a = a * a % mod;
+        b >>= 1;
+    }
+    return ans;
+}
+
+bool ny(int a, int b, int& res) {
+    if (std::gcd(a, b) != 1) return false;
+    res = qpow(a, b - 2, b);
+    return true;
+}
+```
+
+### $exgcd$ 求逆元：
+
+> $ax \equiv 1(\bmod \ b)$
+>
+> $ax + by \equiv 1$
+
+```cpp
+int exgcd(int a, int b, int& x, int& y) {
+    if (b == 0) { x = 1; y = 0; return a; }
+    int d = exgcd(b, a % b, y, x); 
+    y -= a / b * x;
+    return d;
+}
+
+bool ny(int a, int b, int& res) {
+    int d, x, y;
+    d = exgcd(a, b, x, y);
+    if (d != 1) return false;
+    res = (x % b + b) % b;
+    return true;
+}
+```
