数论的一些知识.md

--- a/docs/板子/数论的一些知识.md
+++ b/docs/板子/数论的一些知识.md
@@ -427,3 +427,42 @@ bool ny(int a, int b, int& res) {
     return true;
 }
 ```
+
+## 逆元递推式：
+
+令 $f(i)$ 代表 $i$ 在 $\bmod \ p$ 的逆元，则：
+
+> $f(i) = (p - p / i) * f(p \bmod i) \bmod p$
+>
+> 注意 $p / i$ 为取整除
+
+时间复杂度：$O(n)$
+
+```cpp
+#include <bits/stdc++.h>
+#define int long long
+
+const int N = 1e7 + 10;
+int n, m;
+int inv[N];
+
+void solve() {
+    std::cin >> m >> n;
+    inv[1] = 1;
+    for (int i = 2; i <= n; i ++) {
+        inv[i] = (m - m / i) * inv[m % i] % m;
+    }
+    
+    int res = 0;
+    for (int i = 1; i <= n; i ++) res ^= inv[i];
+    std::cout << res << '\n';
+}
+
+signed main() {
+    std::ios::sync_with_stdio(0);
+    std::cin.tie(0); std::cout.tie(0);
+    
+    solve();
+    return 0;
+}
+```
