数论的一些知识.md

--- a/docs/板子/数论的一些知识.md
+++ b/docs/板子/数论的一些知识.md
@@ -467,6 +467,87 @@ signed main() {
 }
 ```
 
+## 借助前缀乘法求逆元
+
+给定一个集合 $a_1, a_2, a_3, \cdots a_n$ 求每一个元素的逆元：
+
+> 令 $s_i = a_1 * a_2 * \cdots a_i$ 前缀乘法
+>
+> 求出 $s_1, s_2, s_3, \cdots, s_n$
+>
+> 先求出 $s_n$ 的逆元为 $t_n$，则 $t_n = \frac{1}{a_1} * \frac{1}{a_2} * \frac{1}{a_3} * \cdots * \frac{1}{a_n}$
+>
+> 所以 $\frac{1}{a_n} = t_n * s_{n - 1}$，$t_{n - 1} = t_n * a_n$
+
+```cpp
+#include <bits/stdc++.h>
+#define long long long
+
+unsigned int A, B, C;
+inline unsigned int rng61() {
+    A ^= A << 16;
+    A ^= A >> 5;
+    A ^= A << 1;
+    unsigned int t = A;
+    A = B;
+    B = C;
+    C ^= t ^ A;
+    return C;
+}
+
+const long N = 1e7 + 10;
+long mod, n;
+long a[N], s[N], inv[N];
+
+long exgcd(long a, long b, long& x, long& y) {
+    if (b == 0) { x = 1; y = 0; return a; }
+    long d = exgcd(b, a % b, y, x);
+    y -= a / b * x;
+    return d;
+}
+
+bool ny(long a, long mod, long& res) {
+    long d, x, y;
+    d = exgcd(a, mod, x, y);
+    if (d != 1) return false;
+    res = (x % mod + mod) % mod; return true;
+}
+
+void solve() {
+    s[0] = 1;
+    for (long i = 1; i <= n; i ++) {
+        s[i] = s[i - 1] * a[i] % mod;
+    }
+    long t; ny(s[n], mod, t);
+    for (int i = n; i; i --) {
+        inv[i] = t * s[i - 1] % mod;
+        t = t * a[i] % mod;
+    }
+    
+    long res = 0;
+    for (long i = 1; i <= n; i ++) res ^= inv[i];
+    std::cout << res << '\n';
+}
+
+int main() {
+    std::ios::sync_with_stdio(0);
+    std::cin.tie(0); std::cout.tie(0);
+    std::cin >> mod >> n >> A >> B >> C;
+    long cnt = 0;
+    for (long i = 1; i <= n; i ++) {
+        long t = rng61() % mod;
+        if (t == 0) continue;
+        a[++ cnt] = t;
+    }
+    n = cnt;
+    if (n == 0) {
+        std::cout << 0 << '\n'; exit(0);
+    }
+    solve();
+    return 0;
+}
+```
+
 ## 生成随机数
 
 ```cpp
