数论的一些知识.md

--- a/docs/板子/数论的一些知识.md
+++ b/docs/板子/数论的一些知识.md
@@ -579,3 +579,20 @@ int rnum(int n) {
     return rlong() % n + 1;
 }
 ```
+
+## 中国剩余定理
+
+若 $m_1, m_2, \cdots, m_n$ 两两互质，则同余方程：
+
+> $x = a_1 (\bmod \ m_1)$
+> $x = a_2 (\bmod \ m_2)$
+> $\cdots \ \cdots$
+> $x = a_n (\bmod \ m_n)$
+
+有唯一解，且 $\bmod \ M$ 的解唯一，$M = m_1 * m_2 * \cdots m_n$
+
+令 $M_i = \frac{M}{m_i}$，$M_i^{-1}$ 为模 $m_i$ 的逆元
+
+则解为：
+
+> $x = a_1M_1M_1^{-1} + a_2M_2M_2^{-1} + \cdots + a_nM_nM_n^{-1}$
