数论的一些知识.md

--- a/docs/板子/数论的一些知识.md
+++ b/docs/板子/数论的一些知识.md
@@ -595,4 +595,4 @@ int rnum(int n) {
 
 则解为：
 
-> $x = a_1M_1M_1^{-1} + a_2M_2M_2^{-1} + \cdots + a_nM_nM_n^{-1}$
+> $x \equiv (a_1M_1M_1^{-1} + a_2M_2M_2^{-1} + \cdots + a_nM_nM_n^{-1}) \bmod M$
