数论的一些知识.md

--- a/docs/板子/数论的一些知识.md
+++ b/docs/板子/数论的一些知识.md
@@ -596,3 +596,54 @@ int rnum(int n) {
 则解为：
 
 > $x \equiv (a_1M_1M_1^{-1} + a_2M_2M_2^{-1} + \cdots + a_nM_nM_n^{-1}) \bmod M$
+
+```cpp
+#include <bits/stdc++.h>
+#define int long long
+
+const int N = 1e3;
+int n;
+int a[N], m[N], M[N];
+
+int exgcd(int a, int b, int& x, int& y) {
+    if (b == 0) { x = 1; y = 0; return a; }
+    int d = exgcd(b, a % b, y, x);
+    y -= a / b * x;
+    return d;
+}
+
+void solve() {
+    std::cin >> n;
+    for (int i = 1; i <= n; i ++) std::cin >> m[i] >> a[i];
+    
+    int a1 = a[1], m1 = m[1];
+    int ans = a1;
+    
+    for (int i = 2; i <= n; i ++) {
+        int a2 = a[i], m2 = m[i];
+        int a = m1, b = m2, c = ((a2 - a1) % m2 + m2) % m2;
+        int d, x, y;
+        d = exgcd(a, b, x, y);
+        if (c % d) {
+            std::cout << -1 << '\n';
+            return;
+        }
+        // 求出 x 的最小特解
+        x = ((c / d * x) % (b / d) + (b / d)) % (b / d);
+        ans = a1 + x * m1;
+        m1 = m2 / d * m1;
+        ans = (ans % m1 + m1) % m1;
+        a1 = ans;
+    }
+    std::cout << ans << '\n';
+}
+
+signed main() {
+    std::ios::sync_with_stdio(0);
+    std::cin.tie(0); std::cout.tie(0);
+    
+    solve();
+    return 0;
+}
+
+```
