数论的一些知识.md

--- a/docs/板子/数论的一些知识.md
+++ b/docs/板子/数论的一些知识.md
@@ -12,6 +12,16 @@
 
 ---
 
+## 取模然后对约数取模，或者直接对约数取模，效果一样
+
+> $d | m$，判断 $x \bmod m \bmod d = x \bmod d$
+>
+> 令 $t = x \bmod m \bmod d$，则 $x = k_1m + k_2d + t$
+>
+> 所以 $x \bmod d = t$
+
+---
+
 ## 最大公约数：
 
 ```cpp
