数论的一些知识.md

--- a/docs/板子/数论的一些知识.md
+++ b/docs/板子/数论的一些知识.md
@@ -1,5 +1,7 @@
 # [数论的一些知识]()
 
+## 一些常识
+
 1. $a | c$、$b | c$，且 $(a, b) = 1$ 则 $ab | c$
 2. $a | bc$ 且 $(a, b) = 1$，则 $a | c$
 3. $p | ab$ 则 $p | a$ 或 $p | b$
@@ -655,5 +657,4 @@ signed main() {
     solve();
     return 0;
 }
-
 ```
