数论的一些知识.md

--- a/docs/板子/数论的一些知识.md
+++ b/docs/板子/数论的一些知识.md
@@ -700,7 +700,7 @@ void get_prime(int n) {
 }
 ```
 
-## miller-rabin 判断素数
+## [miller-rabin 判断素数](https://zhuanlan.zhihu.com/p/349360074)
 
 ```cpp
 int qmul(__int128 a, __int128 b, __int128 mod) {
