数论的一些知识.md

--- a/docs/板子/数论的一些知识.md
+++ b/docs/板子/数论的一些知识.md
@@ -734,3 +734,21 @@ bool MRtest(int n) { //Miller Rabin Test
 }
 ```
 
+## 整数分块
+
+给定一个正整数 $n$，求集合 ${\frac{n}{1}, \frac{n}{2}, \frac{n}{3}, \cdots, \frac{n}{n}}$ 的元素个数和集合
+
+> 差不多只有 $2\sqrt{n}$ 种不同的取值
+
+每一块的跳跃代码：
+
+时间复杂度：$O(\sqrt{n})$
+
+```cpp
+std::cin >> n; // 降序
+for (int l = 1; l <= n; l ++) {
+    int d = n / l, r = n / d;
+    l = r;
+    std::cout << d << ' ';
+}
+```
