数论的一些知识.md

--- a/docs/板子/数论的一些知识.md
+++ b/docs/板子/数论的一些知识.md
@@ -703,6 +703,16 @@ void get_prime(int n) {
 ## [miller-rabin 判断素数](https://zhuanlan.zhihu.com/p/349360074)
 
 ```cpp
+// int qmul(int a, int b, int mod) {
+//     a = (a % mod + mod) % mod;
+//     int ans = 0;
+//     while (b) {
+//         if (b & 1) ans = (ans + a) % mod;
+//         a = (a + a) % mod;
+//         b >>= 1;
+//     }
+//     return ans;
+// }
 int qmul(__int128 a, __int128 b, __int128 mod) {
     return a % mod * (b % mod) % mod;
 }
@@ -750,5 +760,35 @@ for (int l = 1; l <= n; l ++) {
     int d = n / l, r = n / d;
     l = r;
     std::cout << d << ' ';
+}
+```
+
+## 快速幂
+
+```cpp
+int qpow(int a, int b, int mod) {
+    a = (a % mod + mod) % mod;
+    int ans = 1;
+    while (b) {
+        if (b & 1) ans = ans * a % mod;
+        a = a * a % mod;
+        b >>= 1;
+    }
+    return ans;
+}
+```
+
+## 模余乘
+
+```cpp
+int qmul(int a, int b, int mod) {
+    a = (a % mod + mod) % mod;
+    int ans = 0;
+    while (b) {
+        if (b & 1) ans = (ans + a) % mod;
+        a = (a + a) % mod;
+        b >>= 1;
+    }
+    return ans;
 }
 ```
