数论的一些知识.md

--- a/docs/板子/数论的一些知识.md
+++ b/docs/板子/数论的一些知识.md
@@ -763,6 +763,10 @@ for (int l = 1; l <= n; l ++) {
 }
 ```
 
+---
+
+求 $\sum{f(i)}{\frac{n}{i}}$ 可以用整数分块，切分成很多小块 $[l, r]$ 并且对于 $i \in [l, r]$，$\frac{n}{i}$ 的值都相同，所以可以用 $\frac{n}{i}\sum{f(i)}$ 来求，一般会求 $f(i)$ 的前缀和！
+
 ## 快速幂
 
 ```cpp
