数论的一些知识.md

--- a/docs/板子/数论的一些知识.md
+++ b/docs/板子/数论的一些知识.md
@@ -713,6 +713,15 @@ void get_prime(int n) {
 //     }
 //     return ans;
 // }
+
+// int qmul(int x, int y, int m) {
+//     x %= m; y %= m;
+//     int d = ((long double)x * y / m);
+//     d = x * y - d * m;
+//     if (d >= m) d -= m;
+//     if (d < 0) d += m;
+//     return d;
+// } // 32 位内可以试着用
 int qmul(__int128 a, __int128 b, __int128 mod) {
     return a % mod * (b % mod) % mod;
 }
@@ -783,6 +792,19 @@ int qpow(int a, int b, int mod) {
 ```
 
 ## 模乘
+
+```cpp
+int qmul(int x, int y, int m) {
+    x %= m; y %= m;
+    int d = ((long double)x * y / m);
+    d = x * y - d * m;
+    if (d >= m) d -= m;
+    if (d < 0) d += m;
+    return d;
+} // 32 位内可以试着用
+```
+
+---
 
 ```cpp
 int qmul(int a, int b, int mod) {
