数论的一些知识.md

--- a/docs/板子/数论的一些知识.md
+++ b/docs/板子/数论的一些知识.md
@@ -324,6 +324,7 @@ int exgcd(int a, int b, int& x, int& y) {
 }
 
 int C(int a, int b, int mod) {
+    if (a < b) return 0;
     int p = fac[a], q = fac[b] * fac[a - b] % mod;
     int d, x, y; d = exgcd(q, mod, x, y);
     return (p * x % mod + mod) % mod;
