--- a/docs/板子/数论的一些知识.md
+++ b/docs/板子/数论的一些知识.md
@@ -391,7 +391,7 @@ signed main() {
 
 ## 欧拉定理
 
-令 $1 \sim m$ 范围内与 $m$ 互质的个数为 $f(m)$，若 $\gcd(a, m) \equiv 1$ 则 $a ^ {f(m)} \equiv 1 (\bmod \ m)$
+令 $1 \sim m$ 范围内与 $m$ 互质的个数为 $f(m)$ (欧拉函数)，若 $\gcd(a, m) \equiv 1$ 则 $a ^ {f(m)} \equiv 1 (\bmod \ m)$
 
 特殊情况下，若 $m$ 是质数，则 $f(m) = m - 1$，所以有：$a^{m - 1} \equiv 1 (\bmod \ m)$
 
@@ -818,4 +818,337 @@ int qmul(int a, int b, int mod) {
     }
     return ans;
 }
+```
+
+## 高精度整数运算
+
+不推荐使用，建议改用 $java$ 语言，如果 $java$ 超时，就只能用下面这个了，特殊地：
+
+乘法运算时间复杂的：$O(n^2)$
+
+除法运算时间复杂的：$O(n ^ 2\log(10^n))$ 很慢很慢！
+
+```cpp
+struct big {
+    // 压位高精度
+    const static int mod = 10000000;
+    const static int len = 7;
+    int type;
+    std::vector<int> v;
+    bool zero() { return v.size() == 1 && v[0] == 0; }
+    big(int x = 0) {
+        type = 1;
+        if (x == 0) {
+            type = 0; v.push_back(0); return;
+        }
+        if (x < 0) { type = -1; x *= -1; }
+        while (x) {
+            v.push_back(x % mod); x /= mod;
+        }
+    }
+    big(std::string s) {
+        type = 1;
+        int n = s.size();
+        if (s[0] == '-') {
+            type = -1;
+            s = std::string(s.begin() + 1, s.end());
+            n = s.size();
+        }
+        if (s.size() == 1 && s[0] == '0') type = 0;
+        for (int i = n - 1; i >= 0; i -= len) {
+            int l = i - len + 1, r = i;
+            if (l < 0) l = 0;
+            int res = 0;
+            while (l <= r) {
+                res = res * 10 + s[l] - '0';
+                l ++;
+            }
+            v.push_back(res);
+        }
+    }
+    big(const big& num) {
+        v = num.v;
+        type = num.type;
+    }
+    big& operator=(const big& num) {
+        v = num.v;
+        type = num.type;
+        return *this;
+    }
+    void swap(big& num) {
+        v.swap(num.v);
+        std::swap(type, num.type);
+    }
+    void clear() { v.clear(); }
+    int size() const { return v.size(); }
+    bool operator<(const big& num) const {
+        if (type < num.type) return true;
+        if (type > num.type) return false;
+        if (v.size() != num.v.size()) return (type == 1) ? (v.size() < num.v.size()) : (v.size() > num.v.size());
+        int n = v.size();
+        for (int i = n - 1; ~i; i --) {
+            if (v[i] != num.v[i]) return (type == 1) ? (v[i] < num.v[i]) : (v[i] > num.v[i]);
+        }
+        return false;
+    }
+    bool operator>(const big& num) const {
+        return num < *this;
+    }
+    bool operator==(const big& num) const {
+        return (*this < num) == false && (num < *this) == false;
+    }
+    bool operator<=(const big& num) const {
+        return !(*this > num);
+    }
+    bool operator>=(const big& num) const {
+        return !(*this < num);
+    }
+    std::string to_str() const {
+        std::string res;
+        if (type == -1) res = '-';
+        auto f = [&](int x) -> std::string {
+            if (x == 0) return "0";
+            std::string s;
+            while (x) {
+                s += x % 10 + '0'; x /= 10;
+            }
+            return std::string(s.rbegin(), s.rend());
+        };
+        res += f(v.back());
+        for (auto i = v.rbegin() + 1; i != v.rend(); i ++) {
+            auto t = f(*i);
+            int _ = len - t.size();
+            while (_ --) res += "0";
+            res += t;
+        }
+        return res;
+    }
+    friend
+    std::ostream& operator<<(std::ostream& out, const big& num) {
+        out << num.to_str();
+        return out;
+    }
+    friend
+    std::istream& operator>>(std::istream& on, big& num) {
+        std::string s; on >> s; num = s;
+        return on;
+    }
+    std::vector<int> add(const std::vector<int>& a, const std::vector<int>& b) const {
+        std::vector<int> res;
+        int n = a.size(), m = b.size();
+        for (int i = 0, t = 0; i < n || i < m || t; i ++) {
+            if (i < n) t += a[i];
+            if (i < m) t += b[i];
+            res.push_back(t % mod);
+            t /= mod;
+        }
+        return res;
+    }
+    std::vector<int> sub(const std::vector<int>& a, const std::vector<int>& b) const {
+        std::vector<int> res;
+        int n = a.size(), m = b.size();
+        for (int i = 0, t = 0; i < n; i ++) {
+            t += a[i];
+            int t_ = 0;
+            if (i < m) t -= b[i];
+            if (t < 0) {
+                t += mod;
+                t_ = -1;
+            }
+            res.push_back(t);
+            t = t_;
+        }
+        if (res.back() == 0) {
+            int t = n - 1;
+            while (t >= 0 && res[t] == 0) t --;
+            if (t < 0) res = {0};
+            else res.erase(res.begin() + t + 1, res.end());
+        }
+        return res;
+    }
+    std::vector<int> mul(const std::vector<int>& a, const std::vector<int>& b) const {
+        int n = a.size(), m = b.size();
+        std::vector<int> res(n + m + 10, 0);
+        for (int i = 0; i < n; i ++) {
+            for (int j = 0; j < m; j ++) {
+                res[i + j] += a[i] * b[j];
+            }
+            for (int _ = i, t = 0; _ < i + m || t; _ ++) {
+                t += res[_];
+                res[_] = t % mod;
+                t /= mod;
+            }
+        }
+        if (res.back() == 0) {
+            int t = res.size() - 1;
+            while (t >= 0 && res[t] == 0) t --;
+            if (t < 0) res = {0};
+            else res.erase(res.begin() + t + 1, res.end());
+        }
+        return res;
+    }
+    std::vector<int> div(const std::vector<int>& a, int b) const {
+        std::vector<int> res(a.size());
+        int n = a.size();
+        int t = 0;
+        for (int i = n - 1; i >= 0; i --) {
+            t *= mod; t += a[i];
+            res[i] = t / b; t %= b;
+        }
+        int _ = 0;
+        for (int i = 0; i < n; i ++) {
+            _ += res[i];
+            res[i] = _ % mod;
+            _ /= mod;
+        }
+        while (res.size() && res.back() == 0) res.pop_back();
+        if (res.size() == 0) res = {0};
+        return res;
+    }
+    int bmod(const std::vector<int>& a, int b) const {
+        std::vector<int> res(a.size());
+        int n = a.size();
+        int t = 0;
+        for (int i = n - 1; i >= 0; i --) {
+            t *= 10; t += a[i];
+            res[i] = t / b; t %= b;
+        }
+        return t;
+    }
+    bool cmp(const std::vector<int>& a, const std::vector<int>& b) const {
+        int n = a.size(), m = b.size();
+        if (n != m) return n < m;
+        for (int i = n - 1; ~i; i --) {
+            if (a[i] != b[i]) return a[i] < b[i];
+        }
+        return false;
+    }
+    big operator+(const big& num) const {
+        big res;
+        if (type == -1 && num.type == -1) {
+            res.v = add(v, num.v);
+            res.type = -1;
+        }
+        else if (type == -1) {
+            if (cmp(v, num.v)) {
+                res.type = 1;
+                res.v = sub(num.v, v);
+                if (res.zero()) res.type = 0;
+            }
+            else {
+                res.type = -1;
+                res.v = sub(v, num.v);
+                if (res.zero()) res.type = 0;
+            }
+        }
+        else if (num.type == -1) {
+            if (cmp(v, num.v)) {
+                res.type = -1;
+                res.v = sub(num.v, v);
+                if (res.zero()) res.type = 0;
+            }
+            else {
+                res.type = 1;
+                res.v = sub(v, num.v);
+                if (res.zero()) res.type = 0;
+            }
+        }
+        else {
+            res.type = 1;
+            res.v = add(v, num.v);
+            if (res.zero()) res.type = 0;
+        }
+        return res;
+    }
+    big operator-(const big& num) const {
+        big t = num;
+        t.type *= -1;
+        return *this + t;
+    }
+    big operator*(const big& num) const {
+        big res;
+        if (type == -1 && num.type == -1) {
+            res.type = 1;
+            res.v = mul(v, num.v);
+            if (res.zero()) res.type = 0;
+        }
+        else if (type == -1 || num.type == -1) {
+            res.type = -1;
+            res.v = mul(v, num.v);
+            if (res.zero()) res.type = 0;
+        }
+        else {
+            res.type = 1;
+            res.v = mul(v, num.v);
+            if (res.zero()) res.type = 0;
+        }
+        return res;
+    }
+    big operator/(int num) const {
+        big res;
+        if (type < 0 && num < 0) {
+            res.type = 1;
+            res.v = div(v, std::abs(num));
+            if (res.zero()) res.type = 0;
+        }
+        else if (type < 0 || num < 0) {
+            res.type = -1;
+            res.v = div(v, std::abs(num));
+            if (res.zero()) res.type = 0;
+        }
+        else {
+            res.type = 1;
+            res.v = div(v, num);
+            if (res.zero()) res.type = 0;
+        }
+        return res;
+    }
+    big operator%(int num) const {
+        return *this - (*this) / num * num;
+    }
+    big operator/(const big& num) const {
+        big res;
+        big a = *this, b = num;
+        if (a < 0) a *= -1;
+        if (b < 0) b *= -1;
+        res.type = 1;
+        if (type < 0 && num.type >= 0 || type >= 0 && num.type < 0) {
+            res.type = -1;
+        }
+        if (a < b) return 0;
+        big l = big(0), r = a, mid;
+        while (l < r) {
+            mid = (l + r + 1) / 2;
+            if (mid * b <= a) l = mid;
+            else r = mid - 1;
+        }
+        res.v = r.v;
+        if (res.zero()) res.type = 0;
+        return res;
+    }
+    big operator%(const big& num) const {
+        return *this - (*this) / num * num;
+    }
+    big& operator+=(const big& num) {
+        return *this = *this + num;
+    }
+    big& operator-=(const big& num) {
+        return *this = *this - num;
+    }
+    big& operator*=(const big& num) {
+        return *this = *this * num;
+    }
+    big& operator/=(const big& num) {
+        return *this = *this / num;
+    }
+    big& operator%=(const big& num) {
+        return *this = *this % num;
+    }
+    big& operator/=(int num) {
+        return *this = *this / num;
+    }
+    big& operator%=(int num) {
+        return *this = *this % num;
+    }
+};
 ```
