数论的一些知识.md

--- a/docs/板子/数论的一些知识.md
+++ b/docs/板子/数论的一些知识.md
@@ -79,7 +79,7 @@ int exgcd(int a, int b, int &x, int &y) {
 
 ---
 
-## 求方程 $ax + by = c$ 的通解：
+## 求方程 ax + by = c 的通解：
 
 先求出 $ax + by = (a, b)$ 的一对解 $\{x, y\}$
 
@@ -101,7 +101,7 @@ int exgcd(int a, int b, int &x, int &y) {
 
 ---
 
-## 求一组 $ax + by = c$ 的正整数解：
+## 求一组 ax + by = c 的正整数解：
 
 如果求出 $ax + by = d$ 的一组解为 $x_0, y_0$，则原方程的特解为：$\frac{c}{d} * x_0, \frac{c}{d} * y_0$
 
@@ -153,7 +153,7 @@ int main() {
 
 ---
 
-## 求 $(ax + by) \bmod m$ 的最小值
+## 求 (ax + by) mod m 的最小值
 
 答案是：$0$
 
@@ -169,7 +169,7 @@ int main() {
 
 ---
 
-## 求 $(ax + by + c) \bmod m$ 的最小值
+## 求 (ax + by + c) mod m 的最小值
 
 答案：$\min\{c \bmod \gcd(a, b, m), c \bmod \gcd(a, b, m) - \gcd(a, b, m)\}$
 
@@ -198,7 +198,7 @@ int main() {
 
 ---
 
-## 关于方程 $ax + by + cz = d$ 的特解：
+## 关于方程 ax + by + cz = d 的特解：
 
 1. 首先 $(a, b, c) | d$ 必定成立
 2. 先求出 $ax + by = (a, b)$ 的一对特解记为 $x_1, y_1$
@@ -418,7 +418,7 @@ bool ny(int a, int b, int& res) {
 }
 ```
 
-### $exgcd$ 求逆元：
+### exgcd 求逆元：
 
 > $ax \equiv 1(\bmod \ b)$
 >
