--- a/docs/补题/怪兽.md
+++ b/docs/补题/怪兽.md
@@ -47,6 +47,7 @@ void solve() {
         // std::cout << xx << ' ' << yy << '\n';
         // x 增，则 y 减；y 增，则 x 减
         if (yy < 0) can_not;
+        // 求出 y 的最小正整数，此时是 x 的最大正整数解
         t = (y % a + a) % a;
         t = (y - t) / a;
         long xs = x + b * t, ys = y - a * t;
@@ -56,6 +57,9 @@ void solve() {
             if (b_ >= 0) std::cout << b_ << ' ' << b_ << '\n';
             else can_not; 
         }
+        // 求出 p - x' - y' 的最小值和最大值，其中
+        // xx <= x' <= xs
+        // 0 <= p - x' - y' <= p
         else if (a_ > 0) {
             long mi = (b_ % a_ + a_) % a_;
             long mit = (mi - b_) / a_;
