--- a/docs/补题/怪兽.md
+++ b/docs/补题/怪兽.md
@@ -57,7 +57,7 @@ void solve() {
             if (b_ >= 0) std::cout << b_ << ' ' << b_ << '\n';
             else can_not; 
         }
-        // 求出 p - x' - y' 的最小值和最大值，其中
+        // 求出 p - x' - y' 的最小值和最大值，其中 x'、y' 是 x、y 的通解
         // xx <= x' <= xs
         // 0 <= p - x' - y' <= p
         else if (a_ > 0) {
