数论的一些知识.md

--- a/docs/板子/数论的一些知识.md
+++ b/docs/板子/数论的一些知识.md
@@ -4,7 +4,7 @@
 
 1. $a | c$、$b | c$，且 $(a, b) = 1$ 则 $ab | c$
 2. $a | bc$ 且 $(a, b) = 1$，则 $a | c$
-3. $p | ab$ 则 $p | a$ 或 $p | b$
+3. $p | ab$ 则 $p | a$ 或 $p | b$，前提是 $p$ 是质数
 
 ---
 
