数论的一些知识.md

--- a/docs/板子/数论的一些知识.md
+++ b/docs/板子/数论的一些知识.md
@@ -361,39 +361,139 @@ $n = p_1^{a_1}p_2^{a_2} \cdots p_k^{a_k}$
 
 该式子也称为欧拉函数！
 
+时间复杂的：$O(\sqrt{n})$
+
 ```cpp
-#include <bits/stdc++.h>
-#define long long long
-
-long n;
-long res;
-
-void solve() {
-    std::cin >> n;
-    res = n;
+// 欧拉函数
+// 求与 n 互质的元素个数
+long phi(long n) {
+    long res = n;
     for (long i = 2; i * i <= n; i ++) {
-        if (n % i) continue;
-        res = res / i * (i - 1);
-        while (n % i == 0) n /= i;
+        if (n % i == 0) {
+            res = res / i * (i - 1);
+            while (n % i == 0) n /= i;
+        }
     }
-    if (n != 1) res = res / n * (n - 1);
-    std::cout << res << '\n';
-}
-
-signed main() {
-    std::ios::sync_with_stdio(0);
-    std::cin.tie(0); std::cout.tie(0);
-    long t; std::cin >> t; while (t --)
-    solve();
-    return 0;
+    if (n > 1) res = res / n * (n - 1);
+    return res;
 }
 ```
 
 ## 欧拉定理
 
-令 $1 \sim m$ 范围内与 $m$ 互质的个数为 $f(m)$ (欧拉函数)，若 $\gcd(a, m) \equiv 1$ 则 $a ^ {f(m)} \equiv 1 (\bmod \ m)$
+欧拉函数 $phi(m)$ 等于比 $m$ 小的互质的个数；
 
-特殊情况下，若 $m$ 是质数，则 $f(m) = m - 1$，所以有：$a^{m - 1} \equiv 1 (\bmod \ m)$
+令 $1 \sim m$ 范围内与 $m$ 互质的个数为 $phi(m)$ (欧拉函数)，若 $\gcd(a, m) \equiv 1$ 则 $a ^ {phi(m)} \equiv 1 (\bmod \ m)$
+
+特殊情况下，若 $m$ 是质数，则 $phi(m) = m - 1$，所以有：$a^{m - 1} \equiv 1 (\bmod \ m)$
+
+---
+
+若 $a$ 和 $m$ 互质，则：
+
+> $a ^ b \equiv a ^ {b \bmod phi(m)} (\bmod \ m)$
+
+如果 $a$ 和 $m$ 互质或者不互质，都有：
+
+> 若 $b > phi(m)$:
+>> $a ^ b \equiv a ^ {b \bmod phi(m) + phi(m)}$
+>
+> 若 $b \leq phi(m)$，直接用快速幂求解
+
+---
+
+遇到扩展欧拉定理的题很有可能需要用到高精度:
+
+## 高精度加法
+
+正整数相加
+
+```cpp
+std::vector<long> add(const std::vector<long>& a, const std::vector<long>& b) const {
+    std::vector<long> res;
+    long n = a.size(), m = b.size();
+    for (long i = 0, t = 0; i < n || i < m || t; i ++) {
+        if (i < n) t += a[i];
+        if (i < m) t += b[i];
+        res.push_back(t % mod);
+        t /= mod;
+    }
+    return res;
+}
+```
+
+## 高精度减法
+
+大 - 小
+
+```cpp
+std::vector<long> sub(const std::vector<long>& a, const std::vector<long>& b) const {
+    std::vector<long> res;
+    long n = a.size(), m = b.size();
+    for (long i = 0, t = 0; i < n; i ++) {
+        t += a[i];
+        long t_ = 0;
+        if (i < m) t -= b[i];
+        if (t < 0) {
+            t += mod;
+            t_ = -1;
+        }
+        res.push_back(t);
+        t = t_;
+    }
+    if (res.back() == 0) {
+        long t = n - 1;
+        while (t >= 0 && res[t] == 0) t --;
+        if (t < 0) res = {0};
+        else res.erase(res.begin() + t + 1, res.end());
+    }
+    return res;
+}
+```
+
+## 高精度乘法
+
+```cpp
+std::vector<long> mul(const std::vector<long>& a, const std::vector<long>& b) const {
+    long n = a.size(), m = b.size();
+    std::vector<long> res(n + m + 10, 0);
+    for (long i = 0; i < n; i ++) {
+        for (long j = 0; j < m; j ++) {
+            res[i + j] += a[i] * b[j];
+        }
+        for (long _ = i, t = 0; _ < i + m || t; _ ++) {
+            t += res[_];
+            res[_] = t % mod;
+            t /= mod;
+        }
+    }
+    if (res.back() == 0) {
+        long t = res.size() - 1;
+        while (t >= 0 && res[t] == 0) t --;
+        if (t < 0) res = {0};
+        else res.erase(res.begin() + t + 1, res.end());
+    }
+    return res;
+}
+```
+
+## 高精度除以单精度
+
+```cpp
+// 高精度除法
+long div(const std::vector<char>& a, long b, std::vector<char>& c) {
+    long t = 0;
+    long n = a.size();
+    for (long i = n - 1; ~i; i --) {
+        t = t * 10 + a[i];
+        c.push_back(t / b);
+        t %= b;
+    }
+    c = std::vector<char>(c.rbegin(), c.rend());
+    while (c.size() > 1 && c.back() == 0) c.pop_back();
+    return t;
+}
+```
 
 ## 逆元
 
