数论的一些知识.md

--- a/docs/板子/数论的一些知识.md
+++ b/docs/板子/数论的一些知识.md
@@ -153,6 +153,14 @@ int main() {
 
 ---
 
+## 求 ax mod m 的最小值
+
+> $ax (\bmod \ m)$
+>
+> $ax + my (\bmod \ m)$
+>
+> $t \times \gcd(a, m) (\bmod \ m)$
+
 ## 求 (ax + by) mod m 的最小值
 
 答案是：$0$
