--- a/docs/板子/数论的一些知识.md
+++ b/docs/板子/数论的一些知识.md
@@ -1,5 +1,46 @@
 # [数论的一些知识]()
 
+- [数论的一些知识](#数论的一些知识)
+  - [一些常识](#一些常识)
+  - [取模然后对约数取模，或者直接对约数取模，效果一样](#取模然后对约数取模或者直接对约数取模效果一样)
+  - [最大公约数：](#最大公约数)
+  - [最小公倍数：](#最小公倍数)
+  - [关于整数解：](#关于整数解)
+  - [扩展欧几里得：](#扩展欧几里得)
+  - [求方程 ax + by = c 的通解：](#求方程-ax--by--c-的通解)
+  - [求一组 ax + by = c 的正整数解：](#求一组-ax--by--c-的正整数解)
+  - [求 ax mod m 的最小值](#求-ax-mod-m-的最小值)
+  - [求 (ax + by) mod m 的最小值](#求-ax--by-mod-m-的最小值)
+  - [求 (ax + by + c) mod m 的最小值](#求-ax--by--c-mod-m-的最小值)
+  - [关于方程 ax + by + cz = d 的特解：](#关于方程-ax--by--cz--d-的特解)
+  - [同余的一些性质](#同余的一些性质)
+  - [容斥原理](#容斥原理)
+  - [组合数](#组合数)
+    - [排列组合](#排列组合)
+    - [求组合数](#求组合数)
+  - [欧拉函数](#欧拉函数)
+  - [欧拉定理](#欧拉定理)
+  - [高精度加法](#高精度加法)
+  - [高精度减法](#高精度减法)
+  - [高精度乘法](#高精度乘法)
+  - [高精度除以单精度](#高精度除以单精度)
+  - [逆元](#逆元)
+    - [快速幂求逆元：](#快速幂求逆元)
+    - [exgcd 求逆元：](#exgcd-求逆元)
+  - [逆元递推式：](#逆元递推式)
+  - [借助前缀乘法求逆元](#借助前缀乘法求逆元)
+  - [生成随机数](#生成随机数)
+  - [中国剩余定理](#中国剩余定理)
+  - [筛质数](#筛质数)
+    - [欧拉筛法](#欧拉筛法)
+    - [埃式筛法](#埃式筛法)
+  - [miller-rabin 判断素数](#miller-rabin-判断素数)
+  - [整数分块](#整数分块)
+  - [快速幂](#快速幂)
+  - [模乘](#模乘)
+  - [高精度整数运算](#高精度整数运算)
+
+
 ## 一些常识
 
 1. $a | c$、$b | c$，且 $(a, b) = 1$ 则 $ab | c$
