字符串知识汇总.md

--- a/docs/板子/字符串知识汇总.md
+++ b/docs/板子/字符串知识汇总.md
@@ -2,16 +2,44 @@
 
 ## 字符串哈希
 
-求字符串的哈希值，进制一般取 $233、13331、131$
+求字符串的哈希值，进制一般取 $31、131、1313、13131、131313$
+
+取模数一般都取质数：
 
 ```cpp
-ull R = 233;
-ull Hash(const std::string& s) {
-    ull H = 0;
+999998017 999998023 999998059 999998081 999998107 
+999998119 999998137 999998141 999998143 999998147 
+999998173 999998183 999998203 999998243 999998261 
+999998269 999998309 999998339 999998369 999998423 
+999998459 999998501 999998507 999998509 999998533 
+999998537 999998563 999998609 999998617 999998621 
+999998627 999998639 999998641 999998653 999998663 
+999998683 999998687 999998689 999998693 999998777 
+999998789 999998801 999998843 999998863 999998869 
+999998903 999998917 999998921 999998929 999998957 
+999998959 999998971 999998981 999999001 999999017 
+999999029 999999043 999999059 999999067 999999103 
+999999107 999999113 999999131 999999137 999999151 
+999999163 999999181 999999191 999999193 999999197 
+999999223 999999229 999999323 999999337 999999353 
+999999391 999999433 999999487 999999491 999999503 
+999999527 999999541 999999587 999999599 999999607 
+999999613 999999667 999999677 999999733 999999739 
+999999751 999999757 999999761 999999797 999999883 
+999999893 999999929 999999937 1000000007 1000000009 
+```
+
+```cpp
+const ll N = 2e6;
+ll R1 = 31, R2 = 131313;
+ll M1 = 1e9 + 7, M2 = 1e9 + 9;
+std::pair<ll, ll> Hash(const std::string& s) {
+    ll H1 = 0, H2 = 0;
     for (auto c : s) {
-        H = H * R + c;
+        H1 = (H1 * R1) % M1 + c; H1 %= M1;
+        H2 = (H2 * R2) % M2 + c; H2 %= M2;
     }
-    return H;
+    return {H1, H2};
 }
 ```
 
@@ -21,19 +49,26 @@ ull Hash(const std::string& s) {
 
 ```cpp
 const ll N = 2e6;
-ull R = 233;
-ull H[N], P[N];
-std::string s; // 从 1 开始
-ll n; // 字符串的长度
+ll R1 = 31, R2 = 131313;
+ll M1 = 1e9 + 7, M2 = 1e9 + 9;
+ll H1[N], H2[N]; // 字符串的哈希值
+ll P1[N], P2[N]; // 进制次方
+std::string s;   // 字符串从 1 开始
+ll n;            // 字符串的长度
 void init() {
-    P[0] = 1;
+    P1[0] = P2[0] = 1;
     for (ll i = 1; i <= n; i ++) {
-        H[i] = H[i - 1] * R + s[i];
-        P[i] = P[i - 1] * R;
-    } 
+        P1[i] = P1[i - 1] * R1 % M1;
+        P2[i] = P2[i - 1] * R2 % M2;
+        H1[i] = (H1[i - 1] * R1 % M1 + s[i]) % M1;
+        H2[i] = (H2[i - 1] * R2 % M2 + s[i]) % M2;
+    }
 }
-ull get(ll l, ll r) {
-    return H[r] - H[l - 1] * P[r - l + 1];
+std::pair<ll, ll> get(ll l, ll r) {
+    return {
+        ((H1[r] - H1[l - 1] * P1[r - l + 1] % M1) % M1 + M1) % M1,
+        ((H2[r] - H2[l - 1] * P2[r - l + 1] % M2) % M2 + M2) % M2
+    };
 }
 ```
 
