--- a/docs/板子/字符串知识汇总.md
+++ b/docs/板子/字符串知识汇总.md
@@ -78,58 +78,69 @@ std::pair<ll, ll> get(ll l, ll r) {
 
 给定一个长度为 $n$ 的字符串 $s$，求出该字符串的最大回文子串
 
-中心扩展法：`sssssssss` 要处理成 `s#s#s#s#s#s#s#s#s`
+字符串初始化：`sssssssss` 要处理成 `s#s#s#s#s#s#s#s#s`
 
 ```cpp
-typedef long long ll;
-typedef unsigned long long ull;
-ull R = 233;
-ull H[N], RH[N], P[N];
-std::string s, ss;
-ll n, ssn;
-// 初始化，并处理出中心扩展字符串
-void init() {
-    ss = ' ';
-    for (long i = 1; i <= n; i ++) ss += s[i], ss += '#';
-    ssn = n + n - 1;
-    P[0] = 1;
-    for (ll i = 1; i <= ssn; i ++) {
-        H[i] = H[i - 1] * R + ss[i];
-        P[i] = P[i - 1] * R;
+    const ll N = 2e6;
+    ll R1 = 31, R2 = 131313;
+    ll M1 = 1e9 + 7, M2 = 1e9 + 9;
+    ll H1[N], H2[N];
+    ll RH1[N], RH2[N];
+    ll P1[N], P2[N];
+    std::string s, ss;
+    ll n, ssn;
+    // 初始化，并处理出中心扩展字符串
+    void init() {
+        ss = ' ';
+        for (long i = 1; i <= n; i ++) ss += s[i], ss += '#';
+        ssn = n + n - 1;
+        P1[0] = P2[0] = 1;
+        for (ll i = 1; i <= ssn; i ++) {
+            P1[i] = P1[i - 1] * R1 % M1;
+            P2[i] = P2[i - 1] * R2 % M2;
+            H1[i] = (H1[i - 1] * R1 % M1 + ss[i]) % M1;
+            H2[i] = (H2[i - 1] * R2 % M2 + ss[i]) % M2;
+        }
+        for (ll i = ssn; i; i --) {
+            RH1[i] = (RH1[i + 1] * R1 % M1 + ss[i]) % M1;
+            RH2[i] = (RH2[i + 1] * R2 % M2 + ss[i]) % M2;
+        }
     }
-    for (ll i = ssn; i; i --) {
-        RH[i] = RH[i + 1] * R + ss[i];
+    // 获取 l -> r 的哈希值
+    std::pair<ll, ll> get(ll l, ll r) {
+        return {
+            ((H1[r] - H1[l - 1] * P1[r - l + 1] % M1) % M1 + M1) % M1,
+            ((H2[r] - H2[l - 1] * P2[r - l + 1] % M2) % M2 + M2) % M2
+        };
     }
-}
-// 获取 l -> r 的哈希值
-ull get(ll l, ll r) {
-    return H[r] - H[l - 1] * P[r - l + 1];
-}
-// 获取 r -> l 的哈希值
-ull rget(ll l, ll r) {
-    return RH[l] - RH[r + 1] * P[r - l + 1];
-}
-// 二分查找以 p 为中心的最大回文子串的长度
-ll find(ll p) {
-    ll len = std::min(p, ssn - p + 1);
-    ll l = 1, r = len, mid;
-    while (l < r) {
-        mid = (l + r + 1) >> 1;
-        if (get(p, p + mid - 1) == rget(p - mid + 1, p)) l = mid;
-        else r = mid - 1;
+    // 获取 r -> l 的哈希值
+    std::pair<ll, ll> rget(ll l, ll r) {
+        return {
+            ((RH1[l] - RH1[r + 1] * P1[r - l + 1] % M1) % M1 + M1) % M1,
+            ((RH2[l] - RH2[r + 1] * P2[r - l + 1] % M2) % M2 + M2) % M2
+        };
     }
-    if (ss[p + l - 1] == '#') return l - 1;
-    else return l;
-}
-// 获取以 p 为中心，长度为 len 的回文子串
-std::string get_s(long p, long len) {
-    std::string res;
-    for (ll i = p + 1; res.size() < (len >> 1); i ++) {
-        if (ss[i] == '#') continue;
-        res += ss[i];
+    // 二分查找以 p 为中心的最大回文子串的长度
+    ll find(ll p) {
+        ll len = std::min(p, ssn - p + 1);
+        ll l = 1, r = len, mid;
+        while (l < r) {
+            mid = (l + r + 1) >> 1;
+            if (get(p, p + mid - 1) == rget(p - mid + 1, p)) l = mid;
+            else r = mid - 1;
+        }
+        if (ss[p + l - 1] == '#') return l - 1;
+        else return l;
     }
-    auto t = std::string(res.rbegin(), res.rend());
-    if (ss[p] != '#') t += ss[p];
-    return t + res;
-}
+    // 获取以 p 为中心，长度为 len 的回文子串
+    std::string get_s(long p, long len) {
+        std::string res;
+        for (ll i = p + 1; res.size() < (len >> 1); i ++) {
+            if (ss[i] == '#') continue;
+            res += ss[i];
+        }
+        auto t = std::string(res.rbegin(), res.rend());
+        if (ss[p] != '#') t += ss[p];
+        return t + res;
+    }
 ```
