字符串知识汇总.md

--- a/docs/板子/字符串知识汇总.md
+++ b/docs/板子/字符串知识汇总.md
@@ -1,5 +1,11 @@
 # [字符串知识汇总]()
 
+- [字符串知识汇总](#字符串知识汇总)
+  - [字符串哈希](#字符串哈希)
+  - [二分哈希求最大回文子串](#二分哈希求最大回文子串)
+  - [哈希 - 暴力求最小循环节](#哈希---暴力求最小循环节)
+
+
 ## 字符串哈希
 
 求字符串的哈希值，进制一般取 $31、131、1313、13131、131313$
@@ -30,16 +36,18 @@
 ```
 
 ```cpp
-const ll N = 2e6;
-ll R1 = 31, R2 = 131313;
-ll M1 = 1e9 + 7, M2 = 1e9 + 9;
-std::pair<ll, ll> Hash(const std::string& s) {
-    ll H1 = 0, H2 = 0;
-    for (auto c : s) {
-        H1 = (H1 * R1) % M1 + c; H1 %= M1;
-        H2 = (H2 * R2) % M2 + c; H2 %= M2;
+namespace code {
+    const ll N = 2e6;
+    ll R1 = 31, R2 = 131313;
+    ll M1 = 1e9 + 7, M2 = 1e9 + 9;
+    std::pair<ll, ll> Hash(const std::string& s) {
+        ll H1 = 0, H2 = 0;
+        for (auto c : s) {
+            H1 = (H1 * R1) % M1 + c; H1 %= M1;
+            H2 = (H2 * R2) % M2 + c; H2 %= M2;
+        }
+        return {H1, H2};
     }
-    return {H1, H2};
 }
 ```
 
@@ -48,27 +56,29 @@ std::pair<ll, ll> Hash(const std::string& s) {
 获取字符串某区间的哈希值：
 
 ```cpp
-const ll N = 2e6;
-ll R1 = 31, R2 = 131313;
-ll M1 = 1e9 + 7, M2 = 1e9 + 9;
-ll H1[N], H2[N]; // 字符串的哈希值
-ll P1[N], P2[N]; // 进制次方
-std::string s;   // 字符串从 1 开始
-ll n;            // 字符串的长度
-void init() {
-    P1[0] = P2[0] = 1;
-    for (ll i = 1; i <= n; i ++) {
-        P1[i] = P1[i - 1] * R1 % M1;
-        P2[i] = P2[i - 1] * R2 % M2;
-        H1[i] = (H1[i - 1] * R1 % M1 + s[i]) % M1;
-        H2[i] = (H2[i - 1] * R2 % M2 + s[i]) % M2;
+namespace code {
+    const ll N = 2e6;
+    ll R1 = 31, R2 = 131313;
+    ll M1 = 1e9 + 7, M2 = 1e9 + 9;
+    ll H1[N], H2[N]; // 字符串的哈希值
+    ll P1[N], P2[N]; // 进制次方
+    std::string s;   // 字符串从 1 开始
+    ll n;            // 字符串的长度
+    void init() {
+        P1[0] = P2[0] = 1;
+        for (ll i = 1; i <= n; i ++) {
+            P1[i] = P1[i - 1] * R1 % M1;
+            P2[i] = P2[i - 1] * R2 % M2;
+            H1[i] = (H1[i - 1] * R1 % M1 + s[i]) % M1;
+            H2[i] = (H2[i - 1] * R2 % M2 + s[i]) % M2;
+        }
     }
-}
-std::pair<ll, ll> get(ll l, ll r) {
-    return {
-        ((H1[r] - H1[l - 1] * P1[r - l + 1] % M1) % M1 + M1) % M1,
-        ((H2[r] - H2[l - 1] * P2[r - l + 1] % M2) % M2 + M2) % M2
-    };
+    std::pair<ll, ll> get(ll l, ll r) {
+        return {
+            ((H1[r] - H1[l - 1] * P1[r - l + 1] % M1) % M1 + M1) % M1,
+            ((H2[r] - H2[l - 1] * P2[r - l + 1] % M2) % M2 + M2) % M2
+        };
+    }
 }
 ```
 
@@ -81,6 +91,7 @@ std::pair<ll, ll> get(ll l, ll r) {
 字符串初始化：`sssssssss` 要处理成 `s#s#s#s#s#s#s#s#s`
 
 ```cpp
+namespace code {
     const ll N = 2e6;
     ll R1 = 31, R2 = 131313;
     ll M1 = 1e9 + 7, M2 = 1e9 + 9;
@@ -143,4 +154,55 @@ std::pair<ll, ll> get(ll l, ll r) {
         if (ss[p] != '#') t += ss[p];
         return t + res;
     }
+}
+```
+
+---
+
+## 哈希 - 暴力求最小循环节
+
+给定一个字符串 $S = TTTTTTTTTT\cdots$
+
+请求出长度最小的满足上述式子的字符串 $T$
+
+```cpp
+namespace code {
+    const ll N = 2e6;
+    ll R1 = 31, R2 = 131313;
+    ll M1 = 1e9 + 7, M2 = 1e9 + 9;
+    ll H1[N], H2[N]; // 字符串的哈希值
+    ll P1[N], P2[N]; // 进制次方
+    std::string s;   // 字符串从 1 开始
+    ll n;            // 字符串的长度
+    void init() {
+        P1[0] = P2[0] = 1;
+        for (ll i = 1; i <= n; i ++) {
+            P1[i] = P1[i - 1] * R1 % M1;
+            P2[i] = P2[i - 1] * R2 % M2;
+            H1[i] = (H1[i - 1] * R1 % M1 + s[i]) % M1;
+            H2[i] = (H2[i - 1] * R2 % M2 + s[i]) % M2;
+        }
+    }
+    std::pair<ll, ll> get(ll l, ll r) {
+        return {
+            ((H1[r] - H1[l - 1] * P1[r - l + 1] % M1) % M1 + M1) % M1,
+            ((H2[r] - H2[l - 1] * P2[r - l + 1] % M2) % M2 + M2) % M2
+        };
+    }
+    std::string get_loop() {
+        ll len = 1;
+        while (len < n) {
+            auto hs = get(1, len);
+            for (ll i = 1; i + len - 1 <= n; i += len) {
+                if (get(i, i + len - 1) != hs) {
+                    len ++; goto lab;
+                }
+            }
+            break;
+            lab:;
+        }
+        if (len > n / 2) len = n;
+        return std::string(s.begin() + 1, s.begin() + 1 + len);
+    }
+}
 ```
