字符串知识汇总.md

--- a/docs/板子/字符串知识汇总.md
+++ b/docs/板子/字符串知识汇总.md
@@ -165,6 +165,10 @@ namespace code {
 
 请求出长度最小的满足上述式子的字符串 $T$
 
+暴力枚举循环节可能的长度 $len = 1, 2, \cdots \frac{n}{2}, n$，暴力判断字符串 $S$ 是否由长度为 $len$ 的子串循环构成
+
+时间复杂度：$\frac{n}{1} + \frac{n}{2} + \frac{n}{3} + \cdots + \frac{n}{n} < n\log(n)$
+
 ```cpp
 namespace code {
     const ll N = 2e6;
