--- a/docs/板子/字符串知识汇总.md
+++ b/docs/板子/字符串知识汇总.md
@@ -1,10 +1,9 @@
-# [字符串知识汇总]()
+# 字符串知识汇总
 
 - [字符串知识汇总](#字符串知识汇总)
   - [字符串哈希](#字符串哈希)
   - [二分哈希求最大回文子串](#二分哈希求最大回文子串)
   - [哈希 - 暴力求最小循环节](#哈希---暴力求最小循环节)
-
 
 ## 字符串哈希
 
