--- a/docs/板子/字符串知识汇总.md
+++ b/docs/板子/字符串知识汇总.md
@@ -4,8 +4,9 @@
   - [字符串哈希](#字符串哈希)
   - [二分哈希求最大回文子串](#二分哈希求最大回文子串)
   - [哈希 - 暴力求最小循环节](#哈希---暴力求最小循环节)
+  - [Manacher](#manacher)
 
-## 字符串哈希
+## [字符串哈希](https://www.acwing.com/problem/content/843/)
 
 求字符串的哈希值，进制一般取 $31、131、1313、13131、131313$
 
@@ -83,7 +84,7 @@ namespace lrq {
 
 ---
 
-## 二分哈希求最大回文子串
+## [二分哈希求最大回文子串](https://leetcode.cn/problems/longest-palindromic-substring/description/)
 
 给定一个长度为 $n$ 的字符串 $s$，求出该字符串的最大回文子串
 
@@ -158,7 +159,7 @@ namespace lrq {
 
 ---
 
-## 哈希 - 暴力求最小循环节
+## [哈希 - 暴力求最小循环节](https://ac.nowcoder.com/acm/contest/42400/M)
 
 给定一个字符串 $S = TTTTTTTTTT\cdots$
 
@@ -206,6 +207,87 @@ namespace lrq {
         }
         if (len > n / 2) len = n;
         return std::string(s.begin() + 1, s.begin() + 1 + len);
+    }
+}
+```
+
+## [Manacher](https://leetcode.cn/problems/longest-palindromic-substring/description/)
+
+推导如下：
+
+默认情况下，需要对每一个下标暴力中心扩展回文串的最大长度
+
+在暴力的前提下，对速度进行改良，利用回文串镜像对称的特性，减少暴力扩展的步骤：
+
+情况 1：
+
+![](./img/manacher情况一.png)
+
+如果 $i$ 关于 $c$ 的对称点 $i^\prime$ 的回文子串在 $E^\prime \sim E$ 内，则立马就可以推导出 $i$ 的回文子串的长度也会是 $i^\prime$ 的回文子串的长度（$i^\prime$ 不同的两个端点也镜像复制到 $i$ 那边去了）；
+
+情况 2：
+
+![](./img/manacher情况二.png)
+
+如果 $i$ 关于 $c$ 的对称点 $i^\prime$ 的回文子串存在某部分使得 $E^\prime \sim E$ 装不下了（超出了左边界），则镜像对称之后的 $i$，只有 $i \sim E$ 这部分是关于 $i$ 对称的回文子串是可以确定的，是否还会更长，只可以用暴力中心扩展他的长度。
+
+---
+
+时间复杂度：$O(n)$
+
+
+```cpp
+namespace lrq {
+    ll n;
+    std::string s; // 字符串从下标 1 开始
+    ll ssn;
+    std::string ss;
+    ll P[N]; // 以 i 为中心的最大回文子串的长度
+    ll C, R; // C 代表回文串的中心位置，R 代表回文串最右边元素的下标+1
+    void init() {
+        ss = '?'; 
+        ss += '#';
+        for (ll i = 1; i <= n; i ++) {
+            ss += s[i]; ss += '#';
+        }
+        ss += '!';
+        ssn = 3 + 2 * n;
+    }
+    void manacher() {
+        C = R = 0;
+        for (ll i = 1; i <= ssn; i ++) {
+            if (i <= R) P[i] = std::min(P[2 * C - i], P[C] + C - i);
+            else P[i] = 1;
+            while (ss[i + P[i]] == ss[i - P[i]]) P[i] ++;
+            if (i + P[i] > R) {
+                R = i + P[i];
+                C = i;
+            }
+        }
+    }
+    ll cnt_char(ll l, ll r) {
+        if (ss[l] == '#' && ss[r] == '#') return (r - l) >> 1;
+        else if (ss[l] == '#' || ss[r] == '#') return (r - l + 1) >> 1;
+        else return (r - l + 2) >> 1;
+    }
+    // 获取回文串在原字符串的下标，回文串的长度，回文串
+    void get(ll& center, ll& len, std::string& s) {
+        len = 0;
+        std::string res;
+        for (ll i = 1; i <= ssn; i ++) {
+            auto t = cnt_char(i - P[i] + 1, i + P[i] - 1);
+            if (t > len) {
+                len = t;
+                center = i;
+            }
+        }
+        for (ll i = center + 1, j = 0; j < (len >> 1); i ++) {
+            if (ss[i] == '#') continue;
+            else res += ss[i], j ++;
+        }
+        s = std::string(res.rbegin(), res.rend());
+        if (ss[center] != '#') s += ss[center];
+        s += res;
     }
 }
 ```
