字符串知识汇总.md

--- a/docs/板子/字符串知识汇总.md
+++ b/docs/板子/字符串知识汇总.md
@@ -4,7 +4,7 @@
   - [字符串哈希](#字符串哈希)
   - [二分哈希求最大回文子串](#二分哈希求最大回文子串)
   - [哈希 - 暴力求最小循环节](#哈希---暴力求最小循环节)
-  - [Manacher](#manacher)
+  - [Manacher 求最大回文子串](#manacher-求最大回文子串)
 
 ## [字符串哈希](https://www.acwing.com/problem/content/843/)
 
@@ -211,7 +211,7 @@ namespace lrq {
 }
 ```
 
-## [Manacher](https://leetcode.cn/problems/longest-palindromic-substring/description/)
+## [Manacher 求最大回文子串](https://leetcode.cn/problems/longest-palindromic-substring/description/)
 
 推导如下：
 
