字符串知识汇总.md

--- a/docs/板子/字符串知识汇总.md
+++ b/docs/板子/字符串知识汇总.md
@@ -231,6 +231,12 @@ namespace lrq {
 
 如果 $i$ 关于 $c$ 的对称点 $i^\prime$ 的回文子串存在某部分使得 $E^\prime \sim E$ 装不下了（超出了左边界），则镜像对称之后的 $i$，只有 $i \sim E$ 这部分是关于 $i$ 对称的回文子串是可以确定的，是否还会更长，只可以用暴力中心扩展他的长度。
 
+情况 3：
+
+![](./img/manacher情况三.png)
+
+如果 $i$ 超出了 $c$ 的回文子串的右边界（$i$ 超出了 $E$），则只能对 $i$ 暴力中心扩展他的长度，并将 $c$ 更新为 $i$，$E$ 更新为 $i$ 回文串的右边界（为什么需要更新，只有更新后，$E$ 才能更加的靠右，只有更加的靠右才能更多的节省推导某些节点的回文串的长度）
+
 ---
 
 时间复杂度：$O(n)$
