数论的一些知识.md

--- a/docs/板子/数论的一些知识.md
+++ b/docs/板子/数论的一些知识.md
@@ -934,7 +934,7 @@ for (ll l = 1; l <= n; l ++) {
 
 $\frac{n}{1} + \frac{n}{2} + \frac{n}{3} + \cdots + \frac{n}{n} < 32 * n$
 
-有时候分析时间复杂度的时候会用到，比 $\log(n)$ 要小一点！
+有时候分析时间复杂度的时候会用到，比 $n\log(n)$ 要小一点！
 
 ## 快速幂
 
