字符串知识汇总.md

--- a/docs/板子/字符串知识汇总.md
+++ b/docs/板子/字符串知识汇总.md
@@ -193,8 +193,8 @@ namespace lrq {
             ((H2[r] - H2[l - 1] * P2[r - l + 1] % M2) % M2 + M2) % M2
         };
     }
-    std::string get_loop() {
-        ll len = 1;
+    std::string get_loop(ll& len) {
+        len = 1;
         while (len < n) {
             auto hs = get(1, len);
             for (ll i = 1; i + len - 1 <= n; i += len) {
