字符串知识汇总.md

--- a/docs/板子/字符串知识汇总.md
+++ b/docs/板子/字符串知识汇总.md
@@ -3,8 +3,9 @@
 - [字符串知识汇总](#字符串知识汇总)
   - [字符串哈希](#字符串哈希)
   - [二分哈希求最大回文子串](#二分哈希求最大回文子串)
-  - [哈希 - 暴力求最小循环节](#哈希---暴力求最小循环节)
+  - [字符串哈希 - 暴力求最小循环节](#字符串哈希---暴力求最小循环节)
   - [Manacher 求最大回文子串](#manacher-求最大回文子串)
+  - [KMP](#kmp)
 
 ## [字符串哈希](https://www.acwing.com/problem/content/843/)
 
@@ -159,7 +160,7 @@ namespace lrq {
 
 ---
 
-## [哈希 - 暴力求最小循环节](https://ac.nowcoder.com/acm/contest/42400/M)
+## [字符串哈希 - 暴力求最小循环节](https://ac.nowcoder.com/acm/contest/42400/M)
 
 给定一个字符串 $S = TTTTTTTTTT\cdots$
 
@@ -293,6 +294,49 @@ namespace lrq {
         s = std::string(res.rbegin(), res.rend());
         if (ss[center] != '#') s += ss[center];
         s += res;
+    }
+}
+```
+
+## KMP
+
+```cpp
+namespace lrq {
+    const ll N = 2e6;
+    std::string s, ss; // s 为模式串，ss 为匹配串
+    ll n, m; // s 的长度，ss 的长度，都是从 1 开始
+    ll ne[N];
+    void kmp() {
+        ll i = 0, j = 1; 
+        ne[0] = -1;
+        ne[1] = 0;
+        while (j <= n) {
+            if (i == 0 || s[i] == s[j]) {
+                ne[j ++] = i ++;
+            }
+            else i = ne[i - 1] + 1;
+        }
+    }
+    // 统计 s 在 ss 中出现的位置
+    std::vector<ll> strcmp() {
+        std::vector<ll> pos;
+        ll i = 1, j = 1;
+        while (j <= m) {
+            if (i == 0 || s[i] == ss[j]) {
+                if (i == n) {
+                    pos.push_back(j - n + 1);
+                    i = ne[i - 1] + 1;
+                }
+                else i ++, j ++;
+            }
+            else i = ne[i - 1] + 1;
+        }
+        return pos;
+    }
+    // 最小循环节的长度
+    ll strloop() {
+        ll t = n - ne[n];
+        return t > n / 2 ? n : t;
     }
 }
 ```
