字符串知识汇总.md

--- a/docs/板子/字符串知识汇总.md
+++ b/docs/板子/字符串知识汇总.md
@@ -300,6 +300,14 @@ namespace lrq {
 
 ## KMP
 
+![](./imag/../img/kmp.png)
+
+字符串 $s$ 默认是从下标 $1$ 开始记起
+
+$ne[i]$ 代表 $s[1 \sim i]$ 的最大相同前后缀的长度，所以如果 $s[i] \neq s[j]$ 时，有子串 $s[1 \sim i - 1]$ 和 $s[j - i + 1 \sim j - 1]$ 是匹配成功的，**所以 $i$ 需要跳到 $ne[i - 1] + 1$ 处**
+
+循环节的长度：$n - ne[n]$
+
 ```cpp
 namespace lrq {
     const ll N = 2e6;
