字符串知识汇总.md

--- a/docs/板子/字符串知识汇总.md
+++ b/docs/板子/字符串知识汇总.md
@@ -306,7 +306,7 @@ namespace lrq {
 
 $ne[i]$ 代表 $s[1 \sim i]$ 的最大相同前后缀的长度，所以如果 $s[i] \neq s[j]$ 时，有子串 $s[1 \sim i - 1]$ 和 $s[j - i + 1 \sim j - 1]$ 是匹配成功的，**所以 $i$ 需要跳到 $ne[i - 1] + 1$ 处**
 
-循环节的长度：$n - ne[n]$
+循环节的长度：$n - ne[n] > \frac{n}{2}\ ?\ n : n - ne[n]$
 
 ```cpp
 namespace lrq {
