字符串知识汇总.md

--- a/docs/板子/字符串知识汇总.md
+++ b/docs/板子/字符串知识汇总.md
@@ -194,19 +194,28 @@ namespace lrq {
             ((H2[r] - H2[l - 1] * P2[r - l + 1] % M2) % M2 + M2) % M2
         };
     }
+    // 旧版本，寻找字符串 s 的最小循环节
+    // std::string get_loop(ll& len) {
+    //     len = 1;
+    //     while (len < n) {
+    //         auto hs = get(1, len);
+    //         for (ll i = 1; i + len - 1 <= n; i += len) {
+    //             if (get(i, i + len - 1) != hs) {
+    //                 len ++; goto lab;
+    //             }
+    //         }
+    //         break;
+    //         lab:;
+    //     }
+    //     if (len > n / 2) len = n;
+    //     return std::string(s.begin() + 1, s.begin() + 1 + len);
+    // }
+    // 新版本，利用最大相同前后缀找 s 的最小循环节
     std::string get_loop(ll& len) {
-        len = 1;
-        while (len < n) {
-            auto hs = get(1, len);
-            for (ll i = 1; i + len - 1 <= n; i += len) {
-                if (get(i, i + len - 1) != hs) {
-                    len ++; goto lab;
-                }
-            }
-            break;
-            lab:;
+        for (len = 1; len <= (n >> 1); len ++) {
+            if (get(1, n - len) == get(len + 1, n)) break;
         }
-        if (len > n / 2) len = n;
+        if (len > (n >> 1)) len = n;
         return std::string(s.begin() + 1, s.begin() + 1 + len);
     }
 }
