--- a/docs/板子/字符串知识汇总.md
+++ b/docs/板子/字符串知识汇总.md
@@ -194,7 +194,7 @@ namespace lrq {
             ((H2[r] - H2[l - 1] * P2[r - l + 1] % M2) % M2 + M2) % M2
         };
     }
-    // 旧版本，寻找字符串 s 的最小循环节
+    // 旧版本，暴力枚举长度为 len 的各部分是否相同来判断循环节
     // std::string get_loop(ll& len) {
     //     len = 1;
     //     while (len < n) {
